2005-10-09  Bruno Haible  <bruno@clisp.org>

	* plural-eval.h: New file.
	* plural-eval.c: Include plural-eval.h.
	(sigfpe_exit, sigfpe_code, sigfpe_handler, install_sigfpe_handler,
	uninstall_sigfpe_handler): New definitions, moved here from
	msgl-check.c.
	* msgl-check.c: Include plural.eval.h.
	(sigjmp_buf, sigsetjmp, siglongjmp, USE_SIGINFO): Move to plural-eval.h.
	(sigfpe_exit, sigfpe_code, sigfpe_handler, install_sigfpe_handler,
	uninstall_sigfpe_handler): Move to plural-eval.c.
	* Makefile.am (noinst_HEADERS): Add plural-eval.h.

2005-10-09  Bruno Haible  <bruno@clisp.org>

	* msgl-check.c: Include c-ctype.h instead of ctype.h.
	(check_plural): Use c_isspace instead of isspace.
	* x-librep.c: Include c-ctype.h instead of ctype.h.
	(read_token): Use c_isxdigit instead of isxdigit.
	* x-rst.c: Include c-ctype.h instead of ctype.h.
	(extract_rst): Use c_isdigit instead of isdigit.
	* x-ycp.c: Don't include ctype.h.

2005-10-09  Bruno Haible  <bruno@clisp.org>

	* plural-exp.c: Renamed from plural.c.
	* Makefile.am (libgettextsrc_la_SOURCES): Update.

2005-10-18  Bruno Haible  <bruno@clisp.org>

	Disambiguate overloaded function calls according to argument count.
	* xgettext.h (struct callshape): Add field 'argtotal'.
	(struct partial_call): Likewise.
	(arglist_parser_done): Add argnum argument.
	* xgettext.c (split_keywordspec): Recognize NNt syntax and fill
	argtotal.
	(insert_keyword_callshape, arglist_parser_alloc, arglist_parser_clone):
	Update.
	(arglist_parser_decidedp): Compare also the argtotal if given.
	(arglist_parser_done): Add argnum argument.
	* x-awk.c (extract_parenthesized): Pass arg count to
	arglist_parser_done.
	* x-c.c (extract_parenthesized): Likewise.
	* x-csharp.c (extract_parenthesized): Likewise.
	* x-elisp.c (read_object): Likewise.
	* x-java.c (extract_parenthesized): Likewise.
	* x-librep.c (read_object): Likewise.
	* x-lisp.c (read_object): Likewise.
	* x-perl.c (extract_variable): Update.